--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="@string/title_activity_cartoes"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Lista_faturas"
+            android:name=".ListaFaturas"
             android:label="@string/title_activity_lista_faturas"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
