--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:+'
     compile 'com.google.android.gms:play-services-maps:+'
     compile 'com.google.android.gms:play-services-location:+'
+    compile 'com.google.code.gson:gson:+'
 }
