--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,17 +48,17 @@
             android:label="@string/title_activity_cartoes"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ListaFaturas"
+            android:name=".Faturas"
             android:label="@string/title_activity_lista_faturas"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MinhaConta"
             android:label="@string/title_activity_minha_conta"
-            android:parentActivityName=".ListaFaturas"
+            android:parentActivityName=".Faturas"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="br.com.cloudbank.inacio.walter.cloudbank.ListaFaturas" />
+                android:value=".Faturas" />
         </activity>
         <activity
             android:name=".DetalheFatura"
@@ -67,7 +67,7 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="br.com.cloudbank.inacio.walter.cloudbank.ListaFaturas" />
+                android:value=".Faturas" />
         </activity>
     </application>
 
