--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Nov 24 17:32:15 BRST 2016
-systemProp.http.proxyPassword=w@lter12
-systemProp.http.proxyHost=172.16.0.50
-systemProp.https.proxyPort=3128
-systemProp.https.proxyUser=16527301
-systemProp.https.proxyHost=172.16.0.50
-systemProp.https.proxyPassword=w@lter12
-systemProp.http.proxyPort=3128
-systemProp.http.proxyUser=16527301
+#systemProp.http.proxyPassword=w@lter12
+#systemProp.http.proxyHost=172.16.0.50
+#systemProp.https.proxyPort=3128
+#systemProp.https.proxyUser=16527301
+#systemProp.https.proxyHost=172.16.0.50
+#systemProp.https.proxyPassword=w@lter12
+#systemProp.http.proxyPort=3128
+#systemProp.http.proxyUser=16527301
