--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 11 14:43:05 BRST 2016
-sdk.dir=C\:\\Users\\Kelly\\AppData\\Local\\Android\\Sdk
+#Mon Dec 12 19:01:26 BRST 2016
+sdk.dir=/Users/aluno/Library/Android/sdk
